--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 <div class="contact-info">
                     <div class="contact-item">
                         <span class="icon">📞</span>
-                        <span>41377131</span>
+                        <a href="tel:+22241377131">41377131</a>
                     </div>
                     <div class="contact-item">
                         <span class="icon">✉️</span>
-                        <span>sidahmedhedya59@gmail.com</span>
+                        <a href="mailto:sidahmedhedya59@gmail.com">sidahmedhedya59@gmail.com</a>
                     </div>
                     <div class="contact-item">
                         <span class="icon">📍</span>
