--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sid Ahmed Mohamed Ejjah - Curriculum Vitae</title>
+    <title>Sid'Ahmed Mohamed Ejehah - Curriculum Vitae</title>
     <meta name="description" content="Expert en Cybersécurité et Spécialiste IA - Sid Ahmed Mohamed Ejjah. Plus d'un an d'expérience en tests d'intrusion et développement d'IA.">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;500;600;700&family=Amiri:wght@400;700&family=Cairo:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                     <div class="profile-info">
-                        <h1 class="name">Sid Ahmed Mohamed Ejjah</h1>
+                        <h1 class="name">Sid'Ahmed Mohamed Ejehah</h1>
                         <p class="title" data-fr="Expert en Cybersécurité et Spécialiste IA" data-en="Cybersecurity Expert & AI Specialist" data-ar="خبير الأمن السيبراني ومتخصص الذكاء الاصطناعي">Expert en Cybersécurité et Spécialiste IA</p>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                     <p class="summary-text" 
                        data-fr="Jeune Mauritanien ambitieux et motivé, âgé de 23 ans, avec plus d'un an et quatre mois d'expérience pratique intensive dans les domaines de la programmation المتقدمة، de la cybersécurité، des tests d'intrusion professionnels et du développement de solutions innovantes d'intelligence artificielle. Malgré un parcours éducatif non conventionnel, j'ai acquis des compétences techniques approfondies grâce à un auto-apprentissage intensif et une pratique appliquée continue, ce qui m'a permis de découvrir des vulnérabilités critiques dans les systèmes de grandes entreprises mondiales telles que OKX, eBay et AliExpress."
                        data-en="A highly ambitious and motivated Mauritanian professional, 23 years old, with over one year and four months of intensive practical experience in advanced programming, cybersecurity, professional penetration testing, and innovative AI solutions development. Despite an unconventional educational background, I have acquired deep technical skills through extensive self-learning and continuous practical application, enabling me to discover critical vulnerabilities in major global companies such as OKX, eBay, and AliExpress."
-                       data-ar="شاب موريتاني طموح ومتحفز، يبلغ من العمر 23 عامًا، مع أكثر من سنة وأربعة أشهر من الخبرة العملية المكثفة في البرمجة المتقدمة والأمن السيبراني واختبار الاختراق المهني وتطوير حلول الذكاء الاصطناعي المبتكرة. رغم الخلفية التعليمية غير التقليدية، اكتسبت مهارات تقنية عميقة من خلال التعلم الذاتي المكثف والممارسة التطبيقية المستمرة، مما مكنني من اكتشاف ثغرات أمنية حرجة في أنظمة شركات عالمية كبرى مثل OKX وeBay وAliExpress.">
+                       data-ar="شاب موريتاني طموح مثابر، مواليد 2002، مع أكثر من سنة وأربعة أشهر من الخبرة العملية المكثفة في البرمجة المتقدمة والأمن السيبراني واختبار الاختراق المهني وتطوير حلول الذكاء الاصطناعي المبتكرة. رغم الخلفية التعليمية غير التقليدية، اكتسبت مهارات تقنية عميقة من خلال التعلم الذاتي المكثف والممارسة التطبيقية المستمرة، مما مكنني من اكتشاف ثغرات أمنية حرجة في أنظمة شركات عالمية كبرى مثل OKX وeBay وAliExpress.">
                         Jeune Mauritanien ambitieux et motivé, âgé de 23 ans, avec plus d'un an et quatre mois d'expérience pratique intensive dans les domaines de la programmation المتقدمة، de la cybersécurité، des tests d'intrusion professionnels et du développement de solutions innovantes d'intelligence artificielle. Malgré un parcours éducatif non conventionnel, j'ai acquis des compétences techniques approfondies grâce à un auto-apprentissage intensif et une pratique appliquée continue, ce qui m'a permis de découvrir des vulnérabilités critiques dans les systèmes de grandes entreprises mondiales telles que OKX, eBay et AliExpress.
                     </p>
                 </div>
