--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="profile-section">
                     <div class="profile-image">
                         <div class="profile-placeholder">
-                            <span>A.N.G</span>
+                            <span>ENG</span>
                         </div>
                     </div>
                     <div class="profile-info">
