--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <p class="summary-text" 
                        data-fr="Jeune Mauritanien ambitieux et motivé, âgé de 23 ans, avec plus d'un an et quatre mois d'expérience pratique intensive dans les domaines de la programmation المتقدمة، de la cybersécurité، des tests d'intrusion professionnels et du développement de solutions innovantes d'intelligence artificielle. Malgré un parcours éducatif non conventionnel, j'ai acquis des compétences techniques approfondies grâce à un auto-apprentissage intensif et une pratique appliquée continue, ce qui m'a permis de découvrir des vulnérabilités critiques dans les systèmes de grandes entreprises mondiales telles que OKX, eBay et AliExpress."
                        data-en="A highly ambitious and motivated Mauritanian professional, 23 years old, with over one year and four months of intensive practical experience in advanced programming, cybersecurity, professional penetration testing, and innovative AI solutions development. Despite an unconventional educational background, I have acquired deep technical skills through extensive self-learning and continuous practical application, enabling me to discover critical vulnerabilities in major global companies such as OKX, eBay, and AliExpress."
-                       data-ar="شاب موريتاني طموح مثابر، مواليد 2002، مع أكثر من سنة وأربعة أشهر من الخبرة العملية المكثفة في البرمجة المتقدمة والأمن السيبراني واختبار الاختراق المهني وتطوير حلول الذكاء الاصطناعي المبتكرة. رغم الخلفية التعليمية غير التقليدية، اكتسبت مهارات تقنية عميقة من خلال التعلم الذاتي المكثف والممارسة التطبيقية المستمرة، مما مكنني من اكتشاف ثغرات أمنية حرجة في أنظمة شركات عالمية كبرى مثل OKX وeBay وAliExpress.">
+                       data-ar="شاب موريتاني طموح مثابر، مواليد 2002، مع أكثر من سنة وأربعة أشهر من الخبرة العملية المكثفة في البرمجة المتقدمة والأمن السيبراني واختبار الاختراق المهني وتطوير حلول الذكاء الاصطناعي المبتكرة. رغم الخلفية التعليمية غير التقليدية، اكتسبت مهارات تقنية عميقة من خلال التعلم الذاتي المكثف والممارسة التطبيقية المستمرة، مما مكنني من اكتشاف ثغرات أمنية حرجة في أنظمة شركات عالمية كبرى مثل OKX و eBay و AliExpress.">
                         Jeune Mauritanien ambitieux et motivé, âgé de 23 ans, avec plus d'un an et quatre mois d'expérience pratique intensive dans les domaines de la programmation المتقدمة، de la cybersécurité، des tests d'intrusion professionnels et du développement de solutions innovantes d'intelligence artificielle. Malgré un parcours éducatif non conventionnel, j'ai acquis des compétences techniques approfondies grâce à un auto-apprentissage intensif et une pratique appliquée continue, ce qui m'a permis de découvrir des vulnérabilités critiques dans les systèmes de grandes entreprises mondiales telles que OKX, eBay et AliExpress.
                     </p>
                 </div>
@@ -91,7 +91,7 @@
                                 <span class="skill-item">NLP</span>
                                 <span class="skill-item">TensorFlow</span>
                                 <span class="skill-item">PyTorch</span>
-                                <span class="skill-item" data-fr="Développement Chatbot" data-en="Chatbot Development" data-ar="تطوير الروبوتات المحادثة">Développement Chatbot</span>
+                                <span class="skill-item" data-fr="Développement Chatbot" data-en="Chatbot Development" data-ar="تطوير روبوتات المحادثة">Développement Chatbot</span>
                                 <span class="skill-item" data-fr="Reconnaissance Vocale" data-en="Speech Recognition" data-ar="التعرف على الكلام">Reconnaissance Vocale</span>
                                 <span class="skill-item" data-fr="Synthèse Vocale" data-en="Text-to-Speech" data-ar="تحويل النص إلى كلام">Synthèse Vocale</span>
                             </div>
@@ -120,7 +120,7 @@
                     <div class="experience-item">
                         <div class="experience-header">
                             <h3 class="experience-title" data-fr="Expert en Cybersécurité et Tests d'Intrusion" data-en="Cybersecurity Expert & Penetration Tester" data-ar="خبير الأمن السيبراني ومختبر الاختراق">Expert en Cybersécurité et Tests d'Intrusion</h3>
-                            <span class="experience-duration" data-fr="1 An 4 Mois" data-en="1 Year 4 Months" data-ar="سنة و4 أشهر">1 An 4 Mois</span>
+                            <span class="experience-duration" data-fr="1 An 4 Mois" data-en="1 Year 4 Months" data-ar="سنة و 4 أشهر">1 An 4 Mois</span>
                         </div>
                         <div class="experience-details">
                             <ul class="experience-list">
@@ -155,7 +155,7 @@
                             </div>
                         </div>
                         <div class="project-item">
-                            <h3 class="project-title" data-fr="Chatbot IA" data-en="AI Chatbot" data-ar="روبوت محادثة ذكي">Chatbot IA</h3>
+                            <h3 class="project-title" data-fr="Мадлен" data-en="Мадлен" data-ar="مادلين">MADLIN</h3>
                             <p class="project-description"
                                data-fr="Chatbot intelligent capable de conversion parole-texte et texte-parole avec traitement du langage naturel"
                                data-en="Intelligent chatbot capable of speech-to-text and text-to-speech conversion with natural language processing"
@@ -170,7 +170,7 @@
                             </div>
                         </div>
                         <div class="project-item">
-                            <h3 class="project-title" data-fr="Scanner de Vulnérabilités Web" data-en="Web Vulnerability Scanner" data-ar="ماسح الثغرات الأمنية للمواقع">Scanner de Vulnérabilités Web</h3>
+                            <h3 class="project-title" data-fr="RA-ONE" data-en="RA-ONE" data-ar="RA-ONE">Scanner de Vulnérabilités Web</h3>
                             <p class="project-description"
                                data-fr="Script personnalisé pour scanner les vulnérabilités web courantes telles que l'injection SQL, XSS et LFI"
                                data-en="Custom script for scanning common web vulnerabilities such as SQL Injection, XSS, and LFI"
@@ -193,7 +193,7 @@
                 <h2 class="section-title" data-fr="Éducation et Formation" data-en="Education & Training" data-ar="التعليم والتدريب">Éducation et Formation</h2>
                 <div class="section-content">
                     <div class="education-item">
-                        <h3 class="education-title" data-fr="Certificat de Fin d'Études Préparatoires" data-en="Preparatory School Completion Certificate" data-ar="شهادة إتمام الدراسة الإعدادية">Certificat de Fin d'Études Préparatoires</h3>
+                        <h3 class="education-title" data-fr="Certificat de Fin d'Études Préparatoires" data-en="Preparatory School Completion Certificate" data-ar="شهادة ختم الدروس الإعدادية">Certificat de Fin d'Études Préparatoires</h3>
                         <p class="education-description" data-fr="Éducation de Base" data-en="Basic Education" data-ar="التعليم الأساسي">Éducation de Base</p>
                     </div>
                     <div class="education-item">
@@ -201,7 +201,7 @@
                         <p class="education-description" 
                            data-fr="Cours spécialisés en programmation, cybersécurité et IA provenant de plateformes mondiales telles que Coursera, Udemy, TryHackMe, Hack The Box Academy"
                            data-en="Specialized courses in programming, cybersecurity, and AI from global platforms such as Coursera, Udemy, TryHackMe, Hack The Box Academy"
-                           data-ar="دورات متخصصة في البرمجة والأمن السيبراني والذكاء الاصطناعي من منصات عالمية مثل Coursera وUdemy وTryHackMe وHack The Box Academy">
+                           data-ar="دورات متخصصة في البرمجة والأمن السيبراني والذكاء الاصطناعي من منصات عالمية مثل Coursera و Udemy و TryHackMe و Hack The Box Academy">
                             Cours spécialisés en programmation, cybersécurité et IA provenant de plateformes mondiales telles que Coursera, Udemy, TryHackMe, Hack The Box Academy
                         </p>
                     </div>
@@ -214,7 +214,7 @@
                 <div class="section-content">
                     <div class="personal-skills">
                         <div class="personal-skill">
-                            <span class="skill-icon">🎯</span>
+                            <span class="skill-icon">📚</span>
                             <span class="skill-text" data-fr="Auto-Apprentissage Continu" data-en="Continuous Self-Learning" data-ar="التعلم الذاتي المستمر">Auto-Apprentissage Continu</span>
                         </div>
                         <div class="personal-skill">
@@ -226,16 +226,16 @@
                             <span class="skill-text" data-fr="Pensée Analytique et Critique" data-en="Analytical & Critical Thinking" data-ar="التفكير التحليلي والنقدي">Pensée Analytique et Critique</span>
                         </div>
                         <div class="personal-skill">
-                            <span class="skill-icon">⚡</span>
-                            <span class="skill-text" data-fr="Adaptabilité et Innovation" data-en="Adaptability & Innovation" data-ar="القدرة على التكيف والابتكار">Adaptabilité et Innovation</span>
+                            <span class="skill-icon">⏳</span>
+                            <span class="skill-text" data-fr="Travailler sous pression" data-en="Work under pressure" data-ar="العمل تحت الضغط">Adaptabilité et Innovation</span>
                         </div>
                         <div class="personal-skill">
                             <span class="skill-icon">💻</span>
                             <span class="skill-text" data-fr="Passion pour la Technologie" data-en="Passion for Technology" data-ar="شغف التكنولوجيا">Passion pour la Technologie</span>
                         </div>
                         <div class="personal-skill">
-                            <span class="skill-icon">⏰</span>
-                            <span class="skill-text" data-fr="Travail Sous Pression" data-en="Working Under Pressure" data-ar="العمل تحت الضغط">Travail Sous Pression</span>
+                            <span class="skill-icon">🔰</span>
+                            <span class="skill-text" data-fr="Pensée défensive constante" data-en="Constant defensive thinking" data-ar="التفكير الدفاعي المستمر">Travail Sous Pression</span>
                         </div>
                     </div>
                 </div>
