--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sid'Ahmed Mohamed Ejehah - Curriculum Vitae</title>
-    <meta name="description" content="Expert en Cybersécurité et Spécialiste IA - Sid Ahmed Mohamed Ejjah. Plus d'un an d'expérience en tests d'intrusion et développement d'IA.">
+    <meta name="description" content="Expert en Cybersécurité et Spécialiste IA - Sid'Ahmed Mohamed Ejehah. Plus d'un an d'expérience en tests d'intrusion et développement d'IA.">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;500;600;700&family=Amiri:wght@400;700&family=Cairo:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
