--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
     <script src="script.js"></script>
 <footer style="text-align: center; padding: 20px; background-color: #f2f2f2; font-size: 14px; color: #333;">
-    <span id="footer-text">سيداحمد جميع الحقوق محفوظة 2024 2025</span>
+    <span id="footer-text">© جميع الحقوق محفوظة 2025 sidahmed - سيداحمد</span>
 </footer>
 </body>
 </html>
