--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                 <h2 class="section-title" data-fr="Résumé Professionnel" data-en="Professional Summary" data-ar="الملخص المهني">Résumé Professionnel</h2>
                 <div class="section-content">
                     <p class="summary-text" 
-                       data-fr="Jeune Mauritanien ambitieux et motivé, âgé de 23 ans, avec plus d'un an et quatre mois d'expérience pratique intensive dans les domaines de la programmation المتقدمة، de la cybersécurité، des tests d'intrusion professionnels et du développement de solutions innovantes d'intelligence artificielle. Malgré un parcours éducatif non conventionnel, j'ai acquis des compétences techniques approfondies grâce à un auto-apprentissage intensif et une pratique appliquée continue, ce qui m'a permis de découvrir des vulnérabilités critiques dans les systèmes de grandes entreprises mondiales telles que OKX, eBay et AliExpress."
-                       data-en="A highly ambitious and motivated Mauritanian professional, 23 years old, with over one year and four months of intensive practical experience in advanced programming, cybersecurity, professional penetration testing, and innovative AI solutions development. Despite an unconventional educational background, I have acquired deep technical skills through extensive self-learning and continuous practical application, enabling me to discover critical vulnerabilities in major global companies such as OKX, eBay, and AliExpress."
-                       data-ar="شاب موريتاني طموح مثابر، مواليد 2002، مع أكثر من سنة وأربعة أشهر من الخبرة العملية المكثفة في البرمجة المتقدمة والأمن السيبراني واختبار الاختراق المهني وتطوير حلول الذكاء الاصطناعي المبتكرة. رغم الخلفية التعليمية غير التقليدية، اكتسبت مهارات تقنية عميقة من خلال التعلم الذاتي المكثف والممارسة التطبيقية المستمرة، مما مكنني من اكتشاف ثغرات أمنية حرجة في أنظمة شركات عالمية كبرى مثل OKX و eBay و AliExpress.">
-                        Jeune Mauritanien ambitieux et motivé, âgé de 23 ans, avec plus d'un an et quatre mois d'expérience pratique intensive dans les domaines de la programmation المتقدمة، de la cybersécurité، des tests d'intrusion professionnels et du développement de solutions innovantes d'intelligence artificielle. Malgré un parcours éducatif non conventionnel, j'ai acquis des compétences techniques approfondies grâce à un auto-apprentissage intensif et une pratique appliquée continue, ce qui m'a permis de découvrir des vulnérabilités critiques dans les systèmes de grandes entreprises mondiales telles que OKX, eBay et AliExpress.
+                       data-fr="Sid'Ahmed Mohamed Ejehah, né en 2002. Malgré un parcours éducatif non conventionnel ou peu commun dans la société où j'ai grandi, j'ai acquis des compétences techniques approfondies dans les domaines mentionnés ci-dessous grâce à un auto-apprentissage intensif et une pratique appliquée continue, ce qui m'a permis de découvrir des vulnérabilités de sécurité dans les systèmes de grandes entreprises locales et mondiales."
+                       data-en="Sid'Ahmed Mohamed Ejehah, born in 2002. Despite an unconventional educational background or one uncommon in the society where I grew up, I have acquired deep technical skills in the fields mentioned below through intensive self-learning and continuous practical application, which enabled me to discover security vulnerabilities in the systems of major local and global companies."
+                       data-ar="سيدأحمد محمد أجهاه مواليد 2002 رغم الخلفية التعليمية غير التقليدية او غير المعهودة في المجتمع الذي نشأت فيه اكتسبت مهارات تقنية عميقة في المجالات المذكورة اسفله من خلال التعلم الذاتي المكثف و الممارسة التطبيقية المستمرة مما مكنني من اكتشاف ثغرات أمنية في أنظمة شركات محلية و عالمية كبرى.">
+                        Sid'Ahmed Mohamed Ejehah, né en 2002. Malgré un parcours éducatif non conventionnel ou peu commun dans la société où j'ai grandi, j'ai acquis des compétences techniques approfondies dans les domaines mentionnés ci-dessous grâce à un auto-apprentissage intensif et une pratique appliquée continue, ce qui m'a permis de découvrir des vulnérabilités de sécurité dans les systèmes de grandes entreprises locales et mondiales.
                     </p>
                 </div>
             </section>
@@ -124,10 +124,10 @@
                         </div>
                         <div class="experience-details">
                             <ul class="experience-list">
-                                <li data-fr="Découverte de vulnérabilités critiques dans de grandes entreprises mondiales (OKX, eBay, AliExpress)" data-en="Discovered critical vulnerabilities in major global companies (OKX, eBay, AliExpress)" data-ar="اكتشاف ثغرات أمنية حرجة في شركات عالمية كبرى (OKX، eBay، AliExpress)">Découverte de vulnérabilités critiques dans de grandes entreprises mondiales (OKX, eBay, AliExpress)</li>
-                                <li data-fr="Développement d'outils personnalisés pour automatiser les processus de tests d'intrusion" data-en="Developed custom tools for automating penetration testing processes" data-ar="تطوير أدوات مخصصة لأتمتة عمليات اختبار الاختراق">Développement d'outils personnalisés pour automatiser les processus de tests d'intrusion</li>
+                                <li data-fr="Découverte de vulnérabilités critiques dans de grandes entreprises mondiales et locales (eBay, AliExpress)" data-en="Discovered critical vulnerabilities in major global and local companies (eBay, AliExpress)" data-ar="اكتشاف ثغرات أمنية حرجة في شركات كبرى عالمية و محلية (eBay, AliExpress)">Découverte de vulnérabilités critiques dans de grandes entreprises mondiales et locales (eBay, AliExpress)</li>
+                                <li data-fr="Développement d'outils personnalisés pour automatiser les processus de tests d'intrusion" data-en="Developed custom tools for automating penetration testing processes" data-ar="تطوير ادوات مخصصة لأتمتة عمليات الإختراق">Développement d'outils personnalisés pour automatiser les processus de tests d'intrusion</li>
                                 <li data-fr="Préparation de rapports techniques détaillés pour les vulnérabilités découvertes" data-en="Prepared detailed technical reports for discovered vulnerabilities" data-ar="إعداد تقارير تقنية مفصلة للثغرات المكتشفة">Préparation de rapports techniques détaillés pour les vulnérabilités découvertes</li>
-                                <li data-fr="Participation active sur les plateformes Bug Bounty (HackerOne, HackTheBox)" data-en="Active participation in Bug Bounty platforms (HackerOne, HackTheBox)" data-ar="مشاركة نشطة في منصات Bug Bounty (HackerOne، HackTheBox)">Participation active sur les plateformes Bug Bounty (HackerOne, HackTheBox)</li>
+                                <li data-fr="Participation active sur les plateformes Bug Bounty (HackerOne, HackTheBox)" data-en="Active participation in Bug Bounty platforms (HackerOne, HackTheBox)" data-ar="مشاركة نشطة في منصات Bug Bounty (HackerOne, HackTheBox)">Participation active sur les plateformes Bug Bounty (HackerOne, HackTheBox)</li>
                             </ul>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                             <h3 class="project-title">Telmedeyn-Tool</h3>
                             <p class="project-description" 
                                data-fr="Un outil de test d'intrusion complet et avancé visant à intégrer et simplifier de nombreux outils de test d'intrusion dans une seule plateforme"
-                               data-en="A comprehensive and advanced penetration testing tool aiming to integrate and simplify numerous penetration testing tools into a single platform"
+                               data-en="A comprehensive and advanced penetration testing tool aiming to integrate and simplify numerous penetration testing tools into a single platform" 
                                data-ar="أداة اختبار اختراق شاملة ومتقدمة تهدف إلى دمج وتبسيط العديد من أدوات اختبار الاختراق في منصة واحدة">
                                 Un outil de test d'intrusion complet et avancé visant à intégrer et simplifier de nombreux outils de test d'intrusion dans une seule plateforme
                             </p>
@@ -193,16 +193,24 @@
                 <h2 class="section-title" data-fr="Éducation et Formation" data-en="Education & Training" data-ar="التعليم والتدريب">Éducation et Formation</h2>
                 <div class="section-content">
                     <div class="education-item">
-                        <h3 class="education-title" data-fr="Certificat de Fin d'Études Préparatoires" data-en="Preparatory School Completion Certificate" data-ar="شهادة ختم الدروس الإعدادية">Certificat de Fin d'Études Préparatoires</h3>
-                        <p class="education-description" data-fr="Éducation de Base" data-en="Basic Education" data-ar="التعليم الأساسي">Éducation de Base</p>
+                        <h3 class="education-title" data-fr="Éducation de Base" data-en="Basic Education" data-ar="التعليم الأساسي">Éducation de Base</h3>
+                        <p class="education-description" data-fr="Certificat de Fin d'Études Primaires 2013-2014" data-en="Primary School Completion Certificate 2013-2014" data-ar="شهادة ختم المدرسة الإبتدائية 2013-2014">Certificat de Fin d'Études Primaires 2013-2014</p>
+                        <p class="education-description" data-fr="Certificat de Fin d'Études Préparatoires 2017-2018" data-en="Preparatory School Completion Certificate 2017-2018" data-ar="شهادة ختم الدروس الإعدادية 2017-2018">Certificat de Fin d'Études Préparatoires 2017-2018</p>
+                        <p class="education-description" data-fr="Années Préparatoires au Baccalauréat" data-en="Preparatory Years for Baccalaureate" data-ar="السنوات التحضيرية للباكالوريا..">Années Préparatoires au Baccalauréat</p>
                     </div>
                     <div class="education-item">
                         <h3 class="education-title" data-fr="Auto-Apprentissage Intensif" data-en="Intensive Self-Learning" data-ar="التعلم الذاتي المكثف">Auto-Apprentissage Intensif</h3>
                         <p class="education-description" 
-                           data-fr="Cours spécialisés en programmation, cybersécurité et IA provenant de plateformes mondiales telles que Coursera, Udemy, TryHackMe, Hack The Box Academy"
-                           data-en="Specialized courses in programming, cybersecurity, and AI from global platforms such as Coursera, Udemy, TryHackMe, Hack The Box Academy"
-                           data-ar="دورات متخصصة في البرمجة والأمن السيبراني والذكاء الاصطناعي من منصات عالمية مثل Coursera و Udemy و TryHackMe و Hack The Box Academy">
-                            Cours spécialisés en programmation, cybersécurité et IA provenant de plateformes mondiales telles que Coursera, Udemy, TryHackMe, Hack The Box Academy
+                           data-fr="Achèvement de cours spécialisés en cybersécurité (tests d'intrusion), intelligence artificielle et programmation sur des plateformes mondiales (Udemy, Coursera, TryHackMe)"
+                           data-en="Completion of specialized courses in cybersecurity (penetration testing), artificial intelligence, and programming on global platforms (Udemy, Coursera, TryHackMe)"
+                           data-ar="إكمال دورات متخصصة في الأمن السيبراني (إختبار الإختراق) و الذكاء الإصطناعي و البرمجة على منصات عالمية (udemy, coursera, tryhackme)">
+                            Achèvement de cours spécialisés en cybersécurité (tests d'intrusion), intelligence artificielle et programmation sur des plateformes mondiales (Udemy, Coursera, TryHackMe)
+                        </p>
+                        <p class="education-description" 
+                           data-fr="En attente de cours avancés sur la plateforme Hack The Box Academy"
+                           data-en="Awaiting advanced courses on the Hack The Box Academy platform"
+                           data-ar="مقبل على دورات متقدمة على منصة hack the box academy">
+                            En attente de cours avancés sur la plateforme Hack The Box Academy
                         </p>
                     </div>
                 </div>
@@ -210,7 +218,7 @@
 
             <!-- Personal Skills Section -->
             <section class="section">
-                <h2 class="section-title" data-fr="Compétences Personnelles" data-en="Personal Skills" data-ar="المهارات الشخصية">Compétences Personnelles</h2>
+                <h2 class="section-title" data-fr="Compétences Personnelles" data-en="Personal Skills" data-ar="المهارات الشخصية">Compétences الشخصية</h2>
                 <div class="section-content">
                     <div class="personal-skills">
                         <div class="personal-skill">
@@ -226,16 +234,16 @@
                             <span class="skill-text" data-fr="Pensée Analytique et Critique" data-en="Analytical & Critical Thinking" data-ar="التفكير التحليلي والنقدي">Pensée Analytique et Critique</span>
                         </div>
                         <div class="personal-skill">
-                            <span class="skill-icon">⏳</span>
-                            <span class="skill-text" data-fr="Travailler sous pression" data-en="Work under pressure" data-ar="العمل تحت الضغط">Adaptabilité et Innovation</span>
+                            <span class="skill-icon">⚡</span>
+                            <span class="skill-text" data-fr="Adaptabilité et Innovation" data-en="Adaptability & Innovation" data-ar="القدرة على التكيف والابتكار">Adaptabilité et Innovation</span>
                         </div>
                         <div class="personal-skill">
                             <span class="skill-icon">💻</span>
                             <span class="skill-text" data-fr="Passion pour la Technologie" data-en="Passion for Technology" data-ar="شغف التكنولوجيا">Passion pour la Technologie</span>
                         </div>
                         <div class="personal-skill">
-                            <span class="skill-icon">🔰</span>
-                            <span class="skill-text" data-fr="Pensée défensive constante" data-en="Constant defensive thinking" data-ar="التفكير الدفاعي المستمر">Travail Sous Pression</span>
+                            <span class="skill-icon">🛡️</span>
+                            <span class="skill-text" data-fr="Pensée défensive constante" data-en="Constant defensive thinking" data-ar="التفكير الدفاعي المستمر">التفكير الدفاعي المستمر</span>
                         </div>
                     </div>
                 </div>
