--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
                         <span class="icon">📍</span>
                         <span data-fr="Nouakchott, Mauritanie" data-en="Nouakchott, Mauritania" data-ar="نواكشوط، موريتانيا">Nouakchott, Mauritanie</span>
                     </div>
+                    <!-- زر التواصل عبر تيليجرام -->
+                    <div class="contact-item">
+                        <span class="icon">💬</span>
+                        <a href="https://t.me/raone_002" target="_blank" data-fr="Discuter sur Telegram" data-en="Chat on Telegram" data-ar="تواصل معي عبر تيليجرام">تواصل معي عبر تيليجرام</a>
+                    </div>
                 </div>
             </div>
         </header>
