--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
                 <div class="section-content">
                     <div class="experience-item">
                         <div class="experience-header">
-                            <h3 class="experience-title" data-fr="Expert en Cybersécurité et Tests d'Intrusion" data-en="Cybersecurity Expert & Penetration Tester" data-ar="خبير الأمن السيبراني ومختبر الاختراق">Expert en Cybersécurité et Tests d'Intrusion</h3>
+                            <h3 class="experience-title" data-fr="Expert en Cybersécurité et Tests d'Intrusion" data-en="Cybersecurity Expert & Penetration Tester" data-ar="خبير الأمن السيبراني و مختبر الاختراق">Expert en Cybersécurité et Tests d'Intrusion</h3>
                             <span class="experience-duration" data-fr="1 An 4 Mois" data-en="1 Year 4 Months" data-ar="سنة و 4 أشهر">1 An 4 Mois</span>
                         </div>
                         <div class="experience-details">
                             <ul class="experience-list">
-                                <li data-fr="Découverte de vulnérabilités critiques dans de grandes entreprises mondiales et locales (eBay, AliExpress)" data-en="Discovered critical vulnerabilities in major global and local companies (eBay, AliExpress)" data-ar="اكتشاف ثغرات أمنية حرجة في شركات كبرى عالمية و محلية (eBay, AliExpress)">Découverte de vulnérabilités critiques dans de grandes entreprises mondiales et locales (eBay, AliExpress)</li>
+                                <li data-fr="Découverte de vulnérabilités critiques dans de grandes entreprises mondiales et locales (eBay, AliExpress)" data-en="Discovered critical vulnerabilities in major global and local companies (eBay, AliExpress...)" data-ar="اكتشاف ثغرات أمنية حرجة في شركات كبرى عالمية و محلية (eBay, AliExpress...)">Découverte de vulnérabilités critiques dans de grandes entreprises mondiales et locales (eBay, AliExpress...)</li>
                                 <li data-fr="Développement d'outils personnalisés pour automatiser les processus de tests d'intrusion" data-en="Developed custom tools for automating penetration testing processes" data-ar="تطوير ادوات مخصصة لأتمتة عمليات الإختراق">Développement d'outils personnalisés pour automatiser les processus de tests d'intrusion</li>
                                 <li data-fr="Préparation de rapports techniques détaillés pour les vulnérabilités découvertes" data-en="Prepared detailed technical reports for discovered vulnerabilities" data-ar="إعداد تقارير تقنية مفصلة للثغرات المكتشفة">Préparation de rapports techniques détaillés pour les vulnérabilités découvertes</li>
                                 <li data-fr="Participation active sur les plateformes Bug Bounty (HackerOne, HackTheBox)" data-en="Active participation in Bug Bounty platforms (HackerOne, HackTheBox)" data-ar="مشاركة نشطة في منصات Bug Bounty (HackerOne, HackTheBox)">Participation active sur les plateformes Bug Bounty (HackerOne, HackTheBox)</li>
@@ -179,7 +179,7 @@
                             <p class="project-description"
                                data-fr="Script personnalisé pour scanner les vulnérabilités web courantes telles que l'injection SQL, XSS et LFI"
                                data-en="Custom script for scanning common web vulnerabilities such as SQL Injection, XSS, and LFI"
-                               data-ar="سكريبت مخصص لفحص الثغرات الأمنية الشائعة في المواقع مثل حقن SQL وXSS وLFI">
+                               data-ar="سكريبت مخصص لفحص الثغرات الأمنية الشائعة في المواقع مثل حقن SQL و XSS و LFI">
                                 Script personnalisé pour scanner les vulnérabilités web courantes telles que l'injection SQL, XSS et LFI
                             </p>
                             <div class="project-tech">
@@ -207,9 +207,9 @@
                         <h3 class="education-title" data-fr="Auto-Apprentissage Intensif" data-en="Intensive Self-Learning" data-ar="التعلم الذاتي المكثف">Auto-Apprentissage Intensif</h3>
                         <p class="education-description" 
                            data-fr="Achèvement de cours spécialisés en cybersécurité (tests d'intrusion), intelligence artificielle et programmation sur des plateformes mondiales (Udemy, Coursera, TryHackMe)"
-                           data-en="Completion of specialized courses in cybersecurity (penetration testing), artificial intelligence, and programming on global platforms (Udemy, Coursera, TryHackMe)"
-                           data-ar="إكمال دورات متخصصة في الأمن السيبراني (إختبار الإختراق) و الذكاء الإصطناعي و البرمجة على منصات عالمية (udemy, coursera, tryhackme)">
-                            Achèvement de cours spécialisés en cybersécurité (tests d'intrusion), intelligence artificielle et programmation sur des plateformes mondiales (Udemy, Coursera, TryHackMe)
+                           data-en="Completion of specialized courses in cybersecurity, artificial intelligence, and programming on global platforms (Udemy, Coursera, TryHackMe)"
+                           data-ar="إكمال دورات متخصصة في الأمن السيبراني و الذكاء الإصطناعي و البرمجة على منصات عالمية (udemy, coursera, tryhackme)">
+                            Achèvement de cours spécialisés en cybersécurité, intelligence artificielle et programmation sur des plateformes mondiales (Udemy, Coursera, TryHackMe)
                         </p>
                         <p class="education-description" 
                            data-fr="En attente de cours avancés sur la plateforme Hack The Box Academy"
