--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Language Switcher -->
     <div class="language-switcher">
         <div class="language-buttons">
-            <button class="lang-btn active" data-lang="fr">🇫🇷 Français</button>
+            <button class="lang-btn active" data-lang="fr">Не дави🚫</button>
             <button class="lang-btn" data-lang="en">🇬🇧 English</button>
             <button class="lang-btn" data-lang="ar">🇲🇷 العربية</button>
         </div>
@@ -30,7 +30,7 @@
                     </div>
                     <div class="profile-info">
                         <h1 class="name">Sid'Ahmed Mohamed Ejehah</h1>
-                        <p class="title" data-fr="Expert en Cybersécurité et Spécialiste IA" data-en="Cybersecurity Expert & AI Specialist" data-ar="خبير الأمن السيبراني ومتخصص الذكاء الاصطناعي">Expert en Cybersécurité et Spécialiste IA</p>
+                        <p class="title" data-fr="Expert en Cybersécurité et Spécialiste IA" data-en="Cybersecurity Expert & AI Specialist" data-ar="متخصص مبتدئ في مجال الأمن السيبراني والذكاء الاصطناعي">Entry-level cybersecurity and artificial intelligence specialist</p>
                     </div>
                 </div>
                 <div class="contact-info">
@@ -49,7 +49,7 @@
                     <!-- زر التواصل عبر تيليجرام -->
                     <div class="contact-item">
                         <span class="icon">💬</span>
-                        <a href="https://t.me/raone_002" target="_blank" data-fr="Discuter sur Telegram" data-en="Chat on Telegram" data-ar="تواصل معي عبر تيليجرام">تواصل معي عبر تيليجرام</a>
+                        <a href="https://t.me/gaaraKZG" target="_blank" data-fr="Discuter sur Telegram" data-en="Chat on Telegram" data-ar="تواصل معي عبر تيليجرام">تواصل معي عبر تيليجرام</a>
                     </div>
                 </div>
             </div>
@@ -62,10 +62,10 @@
                 <h2 class="section-title" data-fr="Résumé Professionnel" data-en="Professional Summary" data-ar="الملخص المهني">Résumé Professionnel</h2>
                 <div class="section-content">
                     <p class="summary-text" 
-                       data-fr="Sid'Ahmed Mohamed Ejehah, né en 2002. Malgré un parcours éducatif non conventionnel ou peu commun dans la société où j'ai grandi, j'ai acquis des compétences techniques approfondies dans les domaines mentionnés ci-dessous grâce à un auto-apprentissage intensif et une pratique appliquée continue, ce qui m'a permis de découvrir des vulnérabilités de sécurité dans les systèmes de grandes entreprises locales et mondiales."
-                       data-en="Sid'Ahmed Mohamed Ejehah, born in 2002. Despite an unconventional educational background or one uncommon in the society where I grew up, I have acquired deep technical skills in the fields mentioned below through intensive self-learning and continuous practical application, which enabled me to discover security vulnerabilities in the systems of major local and global companies."
-                       data-ar="سيدأحمد محمد أجهاه مواليد 2002 رغم الخلفية التعليمية غير التقليدية او غير المعهودة في المجتمع الذي نشأت فيه اكتسبت مهارات تقنية عميقة في المجالات المذكورة اسفله من خلال التعلم الذاتي المكثف و الممارسة التطبيقية المستمرة مما مكنني من اكتشاف ثغرات أمنية في أنظمة شركات محلية و عالمية كبرى.">
-                        Sid'Ahmed Mohamed Ejehah, né en 2002. Malgré un parcours éducatif non conventionnel ou peu commun dans la société où j'ai grandi, j'ai acquis des compétences techniques approfondies dans les domaines mentionnés ci-dessous grâce à un auto-apprentissage intensif et une pratique appliquée continue, ce qui m'a permis de découvrir des vulnérabilités de sécurité dans les systèmes de grandes entreprises locales et mondiales.
+                       data-fr=""
+                       data-en="I am Sid'Ahmed Mohamed Ejehah born in 2002 in Rachid City My educational path was different from what is commonly expected in the society where I grew up Through continuous self-learning and hands-on practice I have gradually developed technical skills in the fields listed below.. This journey has allowed me to gain practical experience with real-world systems and on several occasions to help identify security weaknesses in both local and international platforms."
+                       data-ar="أنا سيد أحمد محمد أجهاه، من مواليد 2002 بمدينة الرشيد. كان مساري التعليمي مختلفًا عن المعتاد في المجتمع الذي نشأت فيه. ومن خلال التعلم الذاتي المستمر والممارسة العملية، طوّرت تدريجيًا مهارات تقنية في المجالات المذكورة أدناه. وقد أتاح لي هذا المسار اكتساب خبرة عملية مع أنظمة واقعية، وفي بعض الحالات المساهمة في اكتشاف ثغرات أمنية في منصات محلية ودولية.">
+                        Sid'Ahmed Mohamed Ejehah,
                     </p>
                 </div>
             </section>
@@ -110,7 +110,7 @@
                                 <span class="skill-item">SQL</span>
                                 <span class="skill-item">Flask/Django</span>
                                 <span class="skill-item" data-fr="Développement API" data-en="API Development" data-ar="تطوير واجهات البرمجة">Développement API</span>
-                                <span class="skill-item" data-fr="Développement Web" data-en="Web Development" data-ar="تطوير المواقع">Développement Web</span>
+                                <span class="skill-item" data-fr="" data-en="" data-ar=""></span>
                                 <span class="skill-item" data-fr="Automatisation" data-en="Automation" data-ar="الأتمتة">Automatisation</span>
                             </div>
                         </div>
@@ -124,7 +124,7 @@
                 <div class="section-content">
                     <div class="experience-item">
                         <div class="experience-header">
-                            <h3 class="experience-title" data-fr="Expert en Cybersécurité et Tests d'Intrusion" data-en="Cybersecurity Expert & Penetration Tester" data-ar="خبير الأمن السيبراني و مختبر الاختراق">Expert en Cybersécurité et Tests d'Intrusion</h3>
+                            <h3 class="experience-title" data-fr="Tests d'Intrusion" data-en="Cybersecurity and Penetration Testing" data-ar="الأمن السيبراني و إختبار الإختراق">Tests d'Intrusion</h3>
                             <span class="experience-duration" data-fr="1 An 4 Mois" data-en="1 Year 4 Months" data-ar="سنة و 4 أشهر">1 An 4 Mois</span>
                         </div>
                         <div class="experience-details">
@@ -197,11 +197,11 @@
             <section class="section">
                 <h2 class="section-title" data-fr="Éducation et Formation" data-en="Education & Training" data-ar="التعليم والتدريب">Éducation et Formation</h2>
                 <div class="section-content">
-                    <div class="education-item">
-                        <h3 class="education-title" data-fr="Éducation de Base" data-en="Basic Education" data-ar="التعليم الأساسي">Éducation de Base</h3>
-                        <p class="education-description" data-fr="Certificat de Fin d'Études Primaires 2013-2014" data-en="Primary School Completion Certificate 2013-2014" data-ar="شهادة ختم المدرسة الإبتدائية 2013-2014">Certificat de Fin d'Études Primaires 2013-2014</p>
-                        <p class="education-description" data-fr="Certificat de Fin d'Études Préparatoires 2017-2018" data-en="Preparatory School Completion Certificate 2017-2018" data-ar="شهادة ختم الدروس الإعدادية 2017-2018">Certificat de Fin d'Études Préparatoires 2017-2018</p>
-                        <p class="education-description" data-fr="Années Préparatoires au Baccalauréat" data-en="Preparatory Years for Baccalaureate" data-ar="السنوات التحضيرية للباكالوريا..">Années Préparatoires au Baccalauréat</p>
+                    <div class="">
+                        <h3 class="" data-fr="" data-en="" data-ar="">Éducation de Base</h3>
+                        <p class="" data-fr="" data-en="" data-ar=""></p>
+                        <p class="" data-fr="" data-en="" data-ar=""></p>
+                        <p class="" data-fr="" data-en="" data-ar=""></p>
                     </div>
                     <div class="education-item">
                         <h3 class="education-title" data-fr="Auto-Apprentissage Intensif" data-en="Intensive Self-Learning" data-ar="التعلم الذاتي المكثف">Auto-Apprentissage Intensif</h3>
@@ -227,24 +227,24 @@
                 <div class="section-content">
                     <div class="personal-skills">
                         <div class="personal-skill">
-                            <span class="skill-icon">📚</span>
-                            <span class="skill-text" data-fr="Auto-Apprentissage Continu" data-en="Continuous Self-Learning" data-ar="التعلم الذاتي المستمر">Auto-Apprentissage Continu</span>
+                            <span class="skill-icon">🤌</span>
+                            <span class="skill-text" data-fr="" data-en="I refrain from sharing some of them for trivial reasons." data-ar="امتنع عن مشاركة بعضها لأسباب تافهة">Auto-Apprentissage Continu</span>
                         </div>
                         <div class="personal-skill">
                             <span class="skill-icon">🧩</span>
-                            <span class="skill-text" data-fr="Résolution de Problèmes Complexes" data-en="Complex Problem Solving" data-ar="حل المشاكل المعقدة">Résolution de Problèmes Complexes</span>
+                            <span class="skill-text" data-fr="" data-en="Dealing with fools" data-ar="التعامل مع الأغبياء">Résolution de Problèmes Complexes</span>
                         </div>
                         <div class="personal-skill">
                             <span class="skill-icon">🔍</span>
-                            <span class="skill-text" data-fr="Pensée Analytique et Critique" data-en="Analytical & Critical Thinking" data-ar="التفكير التحليلي والنقدي">Pensée Analytique et Critique</span>
+                            <span class="skill-text" data-fr="Pensée Analytique et Critique" data-en="Analytical & Critical Thinking" data-ar="التفكير التحليلي و النقدي">Pensée Analytique et Critique</span>
                         </div>
                         <div class="personal-skill">
                             <span class="skill-icon">⚡</span>
                             <span class="skill-text" data-fr="Adaptabilité et Innovation" data-en="Adaptability & Innovation" data-ar="القدرة على التكيف والابتكار">Adaptabilité et Innovation</span>
                         </div>
                         <div class="personal-skill">
-                            <span class="skill-icon">💻</span>
-                            <span class="skill-text" data-fr="Passion pour la Technologie" data-en="Passion for Technology" data-ar="شغف التكنولوجيا">Passion pour la Technologie</span>
+                            <span class="skill-icon"></span>
+                            <span class="skill-text" data-fr="" data-en="" data-ar=""></span>
                         </div>
                         <div class="personal-skill">
                             <span class="skill-icon">🛡️</span>
